added paramedic changes
