# src/swagger/users/paramedics.yaml
@@ -95,6 +95,10 @@ paths:
                   format: date-time
                   description: La fecha y hora de recogida de la emergencia.
                   example: "2025-01-22T15:30:00"
+                healthCenterId:
+                  type: string
+                  description: El identificador único del centro de salud.
+                  example: "HCS123"
       responses:
         '200':
           description: La emergencia ha sido confirmada con éxito.
@@ -356,3 +360,69 @@ paths:
                   message:
                     type: string
                     example: "Error al eliminar el paramédico."
+  /paramedic/deliver-patient:
+    post:
+      summary: Marcar una emergencia como entregada
+      description: Actualiza el estado de una emergencia a "DELIVERED" en la base de datos.
+      tags:
+        - Paramedics
+      operationId: deliverPatient
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - emergencyId
+                - deliveredDate
+              properties:
+                emergencyId:
+                  type: string
+                  example: "emergency-123"
+                  description: ID único de la emergencia a entregar.
+                deliveredDate:
+                  type: string
+                  example: "2025-01-01T02:00:00Z"
+                  description: Fecha de entrega de la emergencia.
+      responses:
+        "200":
+          description: La emergencia fue entregada correctamente.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Emergencia entregada correctamente."
+        "400":
+          description: Falta el ID de la emergencia en la solicitud o es inválido.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "El ID de la emergencia es obligatorio."
+        "404":
+          description: No se encontró una emergencia con el ID proporcionado.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "No se encontró una emergencia con ese ID."
+        "500":
+          description: Error interno del servidor.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Error interno del servidor."
